feat: implement seat selection
